--- a/public/about/index.html
+++ b/public/about/index.html
@@ -11,7 +11,7 @@
       <header class="header">
   <div class="header__content">
     <h1 class="site-title">
-      <a href="/">diegozen</a>
+      <a href="/">Diego Calvo</a>
     </h1>
 
     <nav class="nav">
@@ -31,7 +31,7 @@
 <div class="about">
   <h1>About me</h1>
   <img src="/assets/images/me.jpeg" alt="" class="about__image" />
-  <p>Mi nombre es Diego Calvo Castillo, soy desarrollador de software desde 2017, centrando mi actividad en la creación de sistemas basados en web. Mi background es científico/tecnológico, habiendo estudiado Física en la Universidad de Córdoba.</p>
+  <p>I am a Software Engineer living in Seville, Spain. As the CTO of Enreda Coop, I lead projects focused on Open Data and Citizen Participation.</p>
 
 </div>
 </main>
